# cpptexnumber

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpp98texnumber.cpp  cpptexnumber.cpp
src/: cpptexnumber.cpp
